Fixed spacing and button style

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,12 @@ h1, ul {
   font-family: 'Mulish', sans-serif;
 }
 
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 h1 {
   font-size: 49px;
   line-height: 56px;
@@ -51,20 +57,43 @@ h1 span {
   font-weight: bold;
 }
 
-p {
+section p {
   font-size: 14px;
   line-height: 28px;
   color: #7D7987;
+
+  margin: 40px 0;
 }
 
 button {
+  color: white;
   text-transform: uppercase;
   font-family: 'Open Sans', sans-serif;
+
+  background: #69B99D;
+  border: none;
+  border-radius: 4px;
+  padding: 14px 32px 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  cursor: pointer;
+}
+
+button:hover {
+  background: #4EA788
 }
 
 footer {
   font-size: 14px;
   line-height: 28px;
+
+  text-align: center;
+
+  margin-top: 80px;
 }
 
 footer a {
